--- a/kataribe.toml
+++ b/kataribe.toml
@@ -51,16 +51,20 @@ duration_index = 10
 # You can aggregate requests by regular expression
 # For overview of regexp syntax: https://golang.org/pkg/regexp/syntax/
 [[bundle]]
-regexp = '^(GET|HEAD) /memo/[0-9]+\b'
-name = "get memo"
+regexp = 'GET /profile/[a-zA-Z0-9-_\.]+'
+name = "GET /profile/:id"
 
 [[bundle]]
-regexp = '^(GET|HEAD) /stylesheets/'
-name = "stylesheets"
+regexp = 'GET /diary/entries/[a-zA-Z0-9_\.-]+'
+name = "GET /diary/entries/:id"
 
 [[bundle]]
-regexp = '^(GET|HEAD) /images/'
-name = "images"
+regexp = 'POST /friends/[a-zA-Z0-9_\.-]+'
+name = "POST /friends/:id"
+
+[[bundle]]
+regexp = 'POST /profile/[a-zA-Z0-9_\.-]+'
+name = "POST /profile/:id"
 
 # You can replace the part of urls which matched to your regular expressions.
 # For overview of regexp syntax: https://golang.org/pkg/regexp/syntax/
@@ -68,9 +72,9 @@ name = "images"
 #regexp = '/[0-9]+/'
 #replace = '/<num>/'
 #
-#[[replace]]
-#regexp = '/[0-9]+\s'
-#replace = '/<num> '
+[[replace]]
+regexp = '/[0-9]+\s'
+replace = '/<num> '
 #
 #[[replace]]
 #regexp = '=[0-9]+&'
